# net

readsock/: Cargo.toml
readsock/src/: main.rs
writesock/: Cargo.toml
writesock/src/: main.rs
xdpfw/: Cargo.toml  README.md
xdpfw/xdpfw/: Cargo.toml
xdpfw/xdpfw-common/: Cargo.toml
xdpfw/xdpfw-common/src/: lib.rs
xdpfw/xdpfw-ebpf/: Cargo.toml
xdpfw/xdpfw-ebpf/src/: main.rs
xdpfw/xdpfw/src/: main.rs  main.rs.orig-ish
xdpfw/xtask/src/: build_ebpf.rs  codegen.rs  main.rs  run.rs
