[package]
name = "xdpfw"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
xdpfw-common = { path = "../xdpfw-common", features=["user"] }
anyhow = "1.0.42"
bytes = "*"

log = "0.4"
simplelog = "0.11"
structopt = { version = "0.3" }
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "xdpfw"
path = "src/main.rs"
